syntax = "proto3";

package datadog.aggregator;

option go_package = "pkg/proto/pbgo/core"; // golang\

message Metric {
  string check_id = 1;
  string type = 2;
  string metric_name = 3;
  double value = 4;
  string hostname = 5;
  repeated string tags = 6;
  bool flush_first_value = 7;
}

message MetricResponse {
  string status = 1;
}
